# sortingbot

./: CHANGELOG.md  README.md  log.txt  sortingbot-haskell.cabal
app/: DirectoryTools.hs  Logger.hs  Main.hs  Types.hs
