cabal-version:      2.4
name:               sortingbot-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Valerio Mellini
maintainer:         valerio.mellini@aliumind.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable sortingbot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    DirectoryTools

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      directory >=1.3.6.0,
                      directory-tree>=0.12.1,
                      filepath>=1.4.2.1,
                      text>=1.2.4.1
    hs-source-dirs:   app
    default-language: Haskell2010
